# findmybarbot_re

./: Cargo.toml  diesel.toml  findmybarbot.service
migrations/2022-05-03-202540_places/: down.sql  up.sql
src/: main.rs
src/telegram/: keyboard.rs  mod.rs
src/telegram/callbacks/: callback_handler.rs  mod.rs  more_btn_handler.rs  place_location_handler.rs
src/telegram/commands/: location.rs  mod.rs  ping_pong.rs
src/utils/: calculate.rs  mod.rs  poi.rs  utils.rs
src/utils/db/: connect.rs  methods.rs  models.rs  schema.rs
