[package]
name = "findmybarbot_RE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.20.1"
assert_approx_eq = "1.1.0"
telexide = { git = "https://github.com/rmrfus/telexide", branch = "master" }
tokio = { version = "1.18.1", features = ["full"] }
